--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
     <link rel="stylesheet" href="./styles/main.css" />
     <script defer src="./scripts/app.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="#" alt="logo" />
+    </header>
+    <div class="grid-wrapper">
+      <div class="grid"></div>
+    </div>
+  </body>
 </html>
