--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <script defer src="./scripts/app.js"></script>
   </head>
   <body>
-    <header>
-      <img src="#" alt="logo" />
-    </header>
+    <div>
+      <img
+        src="/assets/escape-from-clover-industrials-high-resolution-logo-white.jpeg"
+        alt="logo"
+      />
+    </div>
+
     <div class="grid-wrapper">
       <div class="grid"></div>
     </div>
