debugged and added game overlays

--- a/index.html
+++ b/index.html
@@ -11,58 +11,63 @@
     <div class="logo">
       <img src="/assets/lab-runner-high-resolution-logo.png" alt="logo" />
     </div>
+    <div class="gameBoard">
+      <div class="grid-wrapper">
+        <div class="grid"></div>
+      </div>
 
-    <div class="grid-wrapper">
-      <div class="grid"></div>
-    </div>
-
-    <!-- game overlays -->
-    <div class="active startOverlay popUp">
-      <div class="startPopUp popUpInner">
-        <div class="game-description">
-          <h2>INSTRUCTIONS:</h2>
-          <p>
-            Cupcake cake candy pastry sweet cookie ice cream pie jujubes
-            croissant, lemon drops cotton candy dessert caramels chocolate cake
-            tiramisu marzipan chupa chups tootsie roll, bonbon muffin brownie
-            apple pie jelly liquorice cake icing. Pastry chupa chups liquorice
-            sesame snaps jujubes marzipan candy macaroon cake candy canes muffin
-            caramels, sweet biscuit croissant marshmallow caramel corn carrot
-            cake dessert chocolate bar chocolate. Cookie jelly beans powder
-            sesame snaps cake jelly-o tootsie roll drag\xe9e, cheesecake candy
-            souffl\xe9 apple pie gingerbread danish, cotton candy croissant
-            liquorice marshmallow marzipan fruitcake.
-          </p>
-          <img src="" alt="Arrows keys on keyboard" class="keyboard-arrows" />
-          <div class="startButton">
-            <button class="start">START</button>
-          </div>
-          <div class="sideLogo">
-            <img src="" alt="Game Logo" class="logo" />
+      <!-- game overlays -->
+      <div class="active startOverlay popUp">
+        <div class="startPopUp popUpInner">
+          <div class="game-description">
+            <h2>INSTRUCTIONS:</h2>
+            <p>
+              Cupcake cake candy pastry sweet cookie ice cream pie jujubes
+              croissant, lemon drops cotton candy dessert caramels chocolate
+              cake tiramisu marzipan chupa chups tootsie roll, bonbon muffin
+              brownie apple pie jelly liquorice cake icing. Pastry chupa chups
+              liquorice sesame snaps jujubes marzipan candy macaroon cake candy
+              canes muffin caramels, sweet biscuit croissant marshmallow caramel
+              corn carrot cake dessert chocolate bar chocolate. Cookie jelly
+              beans powder sesame snaps cake jelly-o tootsie roll drag\xe9e,
+              cheesecake candy souffl\xe9 apple pie gingerbread danish, cotton
+              candy croissant liquorice marshmallow marzipan fruitcake.
+            </p>
+            <img src="" alt="Arrows keys on keyboard" class="keyboard-arrows" />
+            <div class="starterButton">
+              <button class="start">START</button>
+            </div>
+            <div class="sideLogo">
+              <img src="" alt="Game Logo" class="logo" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="gameOverlay popUp">
-      <div class="gameOver popUpInner">
-        <img src="#" alt="Game Over GIF" class="gameOverGIF" />
-        <button class="restart">RESTART</button>
+      <div class="gameOverOverlay popUp">
+        <div class="gameOver popUpInner">
+          <img
+            src="/assets/gameOverGIF.gif"
+            alt="Game Over GIF"
+            class="gameOverGIF"
+          />
+          <button class="start restart">RESTART</button>
+        </div>
       </div>
-    </div>
 
-    <div class="winOverlay popUp">
-      <div class="win popUpInner">
-        <h2 class="winner">You've Won!!!</h2>
-        <button class="play-again">PLAY AGAIN?</button>
+      <div class="winOverlay popUp">
+        <div class="win popUpInner">
+          <img src="/assets/winner.gif" alt="Winner GIF" class="winnerGIF" />
+          <button class="play-again">PLAY AGAIN?</button>
+        </div>
       </div>
-    </div>
 
-    <!-- audio section -->
-    <audio src="" id="">
-      <!-- <audio src="../js-soundboard-start/sounds/" id="audio"></audio>
+      <!-- audio section -->
+      <audio src="#" id="">
+        <!-- <audio src="../js-soundboard-start/sounds/" id="audio"></audio>
         <!-- Use data-key and data-url to link sound file and can be linked and pulled from js file -->
-      <!-- <div class="button workit" data-key="1" data-url="work_it.wav"> -->
-    </audio>
+        <!-- <div class="button workit" data-key="1" data-url="work_it.wav"> -->
+      </audio>
+    </div>
   </body>
 </html>
