debugged and refractor

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="winOverlay popUp">
         <div class="win popUpInner">
           <img src="/assets/winner.gif" alt="Winner GIF" class="winnerGIF" />
-          <button class="play-again">PLAY AGAIN?</button>
+          <button class="play-again start">PLAY AGAIN?</button>
         </div>
       </div>
 
