added some styling and few images

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
               cheesecake candy souffl\xe9 apple pie gingerbread danish, cotton
               candy croissant liquorice marshmallow marzipan fruitcake.
             </p>
-            <img src="" alt="Arrows keys on keyboard" class="keyboard-arrows" />
+            <img
+              src="/assets/arrow_keys.png"
+              alt="Arrows keys on keyboard"
+              class="keyboard-arrows"
+            />
             <div class="starterButton">
               <button class="start">START</button>
-            </div>
-            <div class="sideLogo">
-              <img src="" alt="Game Logo" class="logo" />
             </div>
           </div>
         </div>
