added styling for rows

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frogger</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./styles/main.css" />
     <script defer src="./scripts/app.js"></script>
   </head>
   <body>
     <div class="logo">
-      <img src="/assets/lab-runner-high-resolution-logo.png" alt="logo" />
+      <img src="/assets/Lab_Runner.gif" alt="logo" />
     </div>
     <div class="gameBoard">
       <div class="grid-wrapper">
