--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
           <div class="game-description">
             <h2>INSTRUCTIONS:</h2>
             <p>
-              Cupcake cake candy pastry sweet cookie ice cream pie jujubes
-              croissant, lemon drops cotton candy dessert caramels chocolate
-              cake tiramisu marzipan chupa chups tootsie roll, bonbon muffin
-              brownie apple pie jelly liquorice cake icing. Pastry chupa chups
-              liquorice sesame snaps jujubes marzipan candy macaroon cake candy
-              canes muffin caramels, sweet biscuit croissant marshmallow caramel
-              corn carrot cake dessert chocolate bar chocolate. Cookie jelly
-              beans powder sesame snaps cake jelly-o tootsie roll drag\xe9e,
-              cheesecake candy souffl\xe9 apple pie gingerbread danish, cotton
-              candy croissant liquorice marshmallow marzipan fruitcake.
+              A fatal car crash had left you in critical condition. For 7 months
+              you've been experimented on and sedated. Emerged from your
+              slumber, you find yourself trapped in an highly advanced human
+              testing facility where you're “Subject Alpha”. The sedatives have
+              worn off, now a your chance to escape… <br><br><br>
+              <h2>Instructions:</h2>
+              <p>Use the arrow keys on your keyboard to move “Subject
+              Alpha” across the board. Avoid the enhanced security measures
+              whose sole purpose is to keep your from awakening your powers.
+              Make it to the other side and take back your FREEDOM!!!</p>
             </p>
             <img
               src="/assets/arrow_keys.png"
