fixed file path

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway+Dots&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/main.css" />
-    <script defer src="./scripts/app.js"></script>
+    <link rel="stylesheet" href="styles/main.css" />
+    <script defer src="scripts/app.js"></script>
   </head>
   <body>
     <div class="logo">
-      <img src="./assets/Lab_Runner.gif" alt="logo" />
+      <img src="assets/Lab_Runner.gif" alt="logo" />
     </div>
     <div class="gameBoard">
       <div class="grid-wrapper">
