fixed cell images, added more sounds

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 
       <audio src="./sounds/winSound.wav" id="winSound"></audio>
 
+      <audio src="./sounds/footsteps.wav" id="footsteps"></audio>
+
       <!-- <audio src="#" id="">
         <!-- <audio src="../js-soundboard-start/sounds/" id="audio"></audio>
         <!-- Use data-key and data-url to link sound file and can be linked and pulled from js file -->
